  preference edges should not be divided by 2 in branches of
  conditional constructs, because it is not good for performance
  and because it leads to ignoring preference edges with 0 weight.
  (Eric Stavarache, review by Xavier Leroy)

- #9006: int32 code generation improvements
  (Stephen Dolan, designed with Greta Yorsh, review by Xavier Clerc,
   Xavier Leroy and Alain Frisch)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

- #8670: Fix stack overflow detection with systhreads
  (Stephen Dolan, review by Xavier Leroy, Anil Madhavapeddy, Gabriel Scherer,
   Frédéric Bour and Guillaume Munch-Maccagnoni)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

* #8691, #8897, #9027: Allocation functions are now guaranteed not to
  trigger any OCaml callback when called from C. In long-running C
  functions, this can be replaced with calls to caml_check_urgent_gc.
  Side effect of this change: in bytecode mode, polling for
  asynchronous callbacks is perfomed at every minor heap allocation,
  in addition to function calls and loops as in previous OCaml
  releases.
  (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
   Guillaume Munch-Maccagnoni)

- #8630: Use abort() instead of exit(2) in caml_fatal_error, and add
  the new hook caml_fatal_error_hook.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8713: Introduce a state table in the runtime to contain the global variables
   which must be duplicated for each domain in the multicore runtime.
   (KC Sivaramakrishnan and Stephen Dolan, compatibility header hacking by
    David Allsopp, review by David Allsopp, Alain Frisch, Nicolas Ojeda Bar,
    Gabriel Scherer, Damien Doligez, and Guillaume Munch-Maccagnoni)
