@@ -139,6 +139,10 @@ Working version
   (Stephen Dolan, designed with Greta Yorsh, review by Xavier Clerc,
    Xavier Leroy and Alain Frisch)
 
+- #9028, #9032: Fix miscompilation by no longer assuming that
+  untag_int (tag_int x) = x in Cmmgen.
+  (Stephen Dolan, review by Vincent Laviron and Xavier Leroy)
+
 ### Runtime system:
 
 - #8619: Ensure Gc.minor_words remains accurate after a GC.
